[gd_scene format=3 uid="uid://bmp7qk2xnj5vy"]

[ext_resource type="Script" uid="uid://dkvfb8hncnat" path="res://scenes/menu/MultiplayerMenu.gd" id="1_mp_script"]
[ext_resource type="Theme" uid="uid://dgt5fjkytx07d" path="res://assets/resources/menu_theme.tres" id="2_theme"]

[sub_resource type="LabelSettings" id="LabelSettings_title"]
font_size = 64

[node name="MultiplayerMenu" type="Control" unique_id=50575719]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_theme")
script = ExtResource("1_mp_script")

[node name="MarginContainer" type="MarginContainer" parent="." unique_id=30324170]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 100
theme_override_constants/margin_top = 100
theme_override_constants/margin_right = 100
theme_override_constants/margin_bottom = 100

[node name="MainContainer" type="VBoxContainer" parent="MarginContainer" unique_id=829787403]
layout_mode = 2
alignment = 1

[node name="Title" type="Label" parent="MarginContainer/MainContainer" unique_id=1559034109]
layout_mode = 2
text = "Multiplayer"
label_settings = SubResource("LabelSettings_title")

[node name="Spacer" type="Label" parent="MarginContainer/MainContainer" unique_id=1267130512]
layout_mode = 2

[node name="Host" type="Button" parent="MarginContainer/MainContainer" unique_id=183695012]
layout_mode = 2
text = "Host Game"

[node name="Join" type="Button" parent="MarginContainer/MainContainer" unique_id=812488022]
layout_mode = 2
text = "Join Game"

[node name="Spacer2" type="Label" parent="MarginContainer/MainContainer" unique_id=424503189]
layout_mode = 2

[node name="Back" type="Button" parent="MarginContainer/MainContainer" unique_id=2003298568]
layout_mode = 2
text = "Back"

[node name="HostContainer" type="VBoxContainer" parent="MarginContainer" unique_id=1367530733]
visible = false
layout_mode = 2
alignment = 1

[node name="Title" type="Label" parent="MarginContainer/HostContainer" unique_id=1300068139]
layout_mode = 2
text = "Host Game"
label_settings = SubResource("LabelSettings_title")

[node name="Spacer" type="Label" parent="MarginContainer/HostContainer" unique_id=1498886589]
layout_mode = 2

[node name="NameLabel" type="Label" parent="MarginContainer/HostContainer" unique_id=41550843]
layout_mode = 2
text = "Your Name:"

[node name="NameInput" type="LineEdit" parent="MarginContainer/HostContainer" unique_id=1951023156]
layout_mode = 2
text = "Host"
placeholder_text = "Enter your name"

[node name="PortLabel" type="Label" parent="MarginContainer/HostContainer" unique_id=215690886]
layout_mode = 2
text = "Port:"

[node name="PortInput" type="LineEdit" parent="MarginContainer/HostContainer" unique_id=448244751]
layout_mode = 2
text = "7777"
placeholder_text = "7777"

[node name="ColorLabel" type="Label" parent="MarginContainer/HostContainer" unique_id=1773023852]
layout_mode = 2
text = "Your Color:"

[node name="ColorPicker" type="ColorPickerButton" parent="MarginContainer/HostContainer" unique_id=2060893129]
layout_mode = 2
text = " "
color = Color(0.2, 0.5, 0.8, 1)
edit_alpha = false

[node name="Spacer2" type="Label" parent="MarginContainer/HostContainer" unique_id=1259164680]
layout_mode = 2

[node name="Start" type="Button" parent="MarginContainer/HostContainer" unique_id=2091882583]
layout_mode = 2
text = "Start Hosting"

[node name="Back" type="Button" parent="MarginContainer/HostContainer" unique_id=1493123142]
layout_mode = 2
text = "Back"

[node name="JoinContainer" type="VBoxContainer" parent="MarginContainer" unique_id=1968891817]
visible = false
layout_mode = 2
alignment = 1

[node name="Title" type="Label" parent="MarginContainer/JoinContainer" unique_id=1936870881]
layout_mode = 2
text = "Join Game"
label_settings = SubResource("LabelSettings_title")

[node name="Spacer" type="Label" parent="MarginContainer/JoinContainer" unique_id=428817811]
layout_mode = 2

[node name="NameLabel" type="Label" parent="MarginContainer/JoinContainer" unique_id=930580052]
layout_mode = 2
text = "Your Name:"

[node name="NameInput" type="LineEdit" parent="MarginContainer/JoinContainer" unique_id=1136501165]
layout_mode = 2
text = "Player"
placeholder_text = "Enter your name"

[node name="AddressLabel" type="Label" parent="MarginContainer/JoinContainer" unique_id=1334098381]
layout_mode = 2
text = "Server Address:"

[node name="AddressInput" type="LineEdit" parent="MarginContainer/JoinContainer" unique_id=1955405439]
layout_mode = 2
text = "localhost"
placeholder_text = "localhost or IP address"

[node name="PortLabel" type="Label" parent="MarginContainer/JoinContainer" unique_id=1579090998]
layout_mode = 2
text = "Port:"

[node name="PortInput" type="LineEdit" parent="MarginContainer/JoinContainer" unique_id=425876229]
layout_mode = 2
text = "7777"
placeholder_text = "7777"

[node name="ColorLabel" type="Label" parent="MarginContainer/JoinContainer" unique_id=355267925]
layout_mode = 2
text = "Your Color:"

[node name="ColorPicker" type="ColorPickerButton" parent="MarginContainer/JoinContainer" unique_id=1981996504]
layout_mode = 2
text = " "
color = Color(0.2, 0.5, 0.8, 1)
edit_alpha = false

[node name="Spacer2" type="Label" parent="MarginContainer/JoinContainer" unique_id=824696133]
layout_mode = 2

[node name="Connect" type="Button" parent="MarginContainer/JoinContainer" unique_id=2004345636]
layout_mode = 2
text = "Connect"

[node name="Back" type="Button" parent="MarginContainer/JoinContainer" unique_id=1525545779]
layout_mode = 2
text = "Back"

[node name="LobbyContainer" type="VBoxContainer" parent="MarginContainer" unique_id=533440287]
visible = false
layout_mode = 2
alignment = 1

[node name="Title" type="Label" parent="MarginContainer/LobbyContainer" unique_id=2053853452]
layout_mode = 2
text = "Lobby"
label_settings = SubResource("LabelSettings_title")

[node name="Spacer" type="Label" parent="MarginContainer/LobbyContainer" unique_id=1134473391]
layout_mode = 2

[node name="PlayersLabel" type="Label" parent="MarginContainer/LobbyContainer" unique_id=931065241]
layout_mode = 2
text = "Connected Players:"

[node name="PlayerList" type="ItemList" parent="MarginContainer/LobbyContainer" unique_id=1748532462]
custom_minimum_size = Vector2(0, 150)
layout_mode = 2
allow_reselect = true
auto_height = true

[node name="Spacer2" type="Label" parent="MarginContainer/LobbyContainer" unique_id=1463693181]
layout_mode = 2

[node name="Start" type="Button" parent="MarginContainer/LobbyContainer" unique_id=1268442635]
layout_mode = 2
text = "Start Game"

[node name="Leave" type="Button" parent="MarginContainer/LobbyContainer" unique_id=304673803]
layout_mode = 2
text = "Leave"

[node name="ErrorLabel" type="Label" parent="MarginContainer" unique_id=150230516]
visible = false
layout_mode = 2
size_flags_vertical = 8
theme_override_colors/font_color = Color(1, 0.3, 0.3, 1)
text = "Error message"

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="pressed" from="MarginContainer/MainContainer/Host" to="." method="_on_host_pressed"]
[connection signal="pressed" from="MarginContainer/MainContainer/Join" to="." method="_on_join_pressed"]
[connection signal="pressed" from="MarginContainer/MainContainer/Back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="MarginContainer/HostContainer/Start" to="." method="_on_host_start_pressed"]
[connection signal="pressed" from="MarginContainer/HostContainer/Back" to="." method="_on_host_back_pressed"]
[connection signal="pressed" from="MarginContainer/JoinContainer/Connect" to="." method="_on_join_connect_pressed"]
[connection signal="pressed" from="MarginContainer/JoinContainer/Back" to="." method="_on_join_back_pressed"]
[connection signal="pressed" from="MarginContainer/LobbyContainer/Start" to="." method="_on_lobby_start_pressed"]
[connection signal="pressed" from="MarginContainer/LobbyContainer/Leave" to="." method="_on_lobby_leave_pressed"]
